# snow_prediction

./: README.md  imis.http  pyproject.toml
snow_prediction/: README.md  download_files.py  html_parser.py  main.py
snow_prediction/model/: tft.py
snow_prediction/preprocessing/: metadata.py  preprocessor.py  test_preprocessor.py
