[tool.poetry]
name = "snow-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
darts = "^0.31.0"
requests = "^2.32.3"
torch = {version = "^2.5.1+cu124", source = "pytorch_cuda"}
tensorboard = "^2.18.0"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
